WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
280291
The attached HTML file causes crash in WebKit::PluginView::didChangeSettings, UnifiedPDFPlugin::didChangeSettings
https://bugs.webkit.org/show_bug.cgi?id=280291
Summary
The attached HTML file causes crash in WebKit::PluginView::didChangeSettings,...
Anil Hebbar
Reported
2024-09-24 14:10:42 PDT
Created
attachment 472669
[details]
html file causing crash The attached HTML file cause crash in webkit
Attachments
html file causing crash
(59 bytes, text/html)
2024-09-24 14:10 PDT
,
Anil Hebbar
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Anil Hebbar
Comment 1
2024-09-25 14:59:35 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/34251
Anil Hebbar
Comment 2
2024-09-25 16:08:36 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/34257
Anil Hebbar
Comment 3
2024-09-25 16:55:06 PDT
<
rdar://problem/135586580
>
Anil Hebbar
Comment 4
2024-09-27 13:14:55 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/34381
EWS
Comment 5
2024-09-30 10:39:37 PDT
Committed
284458@main
(c8c88ee7a96d): <
https://commits.webkit.org/284458@main
> Reviewed commits have been landed. Closing PR #34381 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug