[b6b120387cbd43a7] ASAN_SEGV | WebKit::UnifiedPDFPlugin::didChangeSettings; WebKit::PluginView::didChangeSettings; WebKit::WebPage::updatePreferences

https://bugs.webkit.org/show_bug.cgi?id=280291

rdar://135586580

Reviewed by NOBODY (OOPS!).

THe crash was because of referencing NULL pointers. The fix was to do a NULL check on the pointers befoer they are used

* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/PDFScrollingPresentationController.mm:
(WebKit::PDFScrollingPresentationController::updateDebugBorders):
* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm:
(WebKit::UnifiedPDFPlugin::didChangeSettings):

Changes to be committed:
Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/PDFScrollingPresentationController.mm
Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm